--- a/Contact.html
+++ b/Contact.html
@@ -87,7 +87,7 @@
         <img src="Trolex Logo.jpeg" alt="Trolex Investment Logo">
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
             </ul>
