--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
         <img src="Trolex Logo.jpeg" alt="Trolex Investment Logo">
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
