--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
             text-align: center;
         }
         header img {
-            width: 700px; /* Enlarged horizontally */
-            height: 300px; /* Reduced vertically */
+            width: 700px; 
+            height: 300px; 
         }
         nav ul {
             list-style: none;
@@ -53,12 +53,12 @@
             background-color: rgba(30, 144, 255, 0.1); /* Light Blue on hover */
         }
         .service h2 {
-            font-size: 32px; /* Enlarged service title */
+            font-size: 32px; 
             color: #1E90FF; /* Bluish Green */
             margin-bottom: 10px;
         }
         .service p {
-            font-size: 28px; /* Enlarged explanation */
+            font-size: 28px; 
         }
         .read-more {
             color: #1E90FF; /* Bluish Green */
@@ -100,7 +100,7 @@
             font-size: 2em; /* Increased size for the modal header */
         }
 		.modal-content p {
-            font-size: 1.5em; /* Enlarged font size for the paragraph text */
+            font-size: 1.5em; 
         }
         .close {
             color: #aaa;
@@ -122,7 +122,7 @@
         <img src="Trolex Logo.jpeg" alt="Trolex Investment Logo">
         <nav>
             <ul>
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
