--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body>
 
     <header>
-        <img src="Trolex Logo.JPEG" alt="Trolex Investment Logo">
+        <img src="Trolex Logo.jpeg" alt="Trolex Investment Logo">
         <nav>
             <ul>
                 <li><a href="services.html">Services</a></li>
