--- a/Contact.html
+++ b/Contact.html
@@ -100,11 +100,11 @@
         <p>Get in touch with us through the following platforms by just one click:</p>
         <div class="contact-icons">
             <a href="tel:267 75508168" target="_blank">
-                <img src="WhatsApp Icon.WEBP" alt="WhatsApp">
+                <img src="WhatsApp Icon.webp" alt="WhatsApp">
                 WhatsApp
             </a>
             <a href="https://www.facebook.com/share/w7GxXPA8UUH3h5Nx/" target="_blank">
-                <img src="Facebook icon.JPG" alt="Facebook">
+                <img src="Facebook icon.jpg" alt="Facebook">
                 Facebook
             </a>
             <a href="precious.mbulawa@gmail.com">
